Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28174

QAccessibleTree calculates model indexes incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.1
    • 5.0.0 RC 1
    • None
    • 01f1ef11856a683fa843d7e9c0147e244f0d1694

    Description

      Given this code:

        QStringListModel model(QStringList() << "ONE" << "TWO");
        QTreeView view;
        view.setModel(&model);
      
        view.show();
      

      I get this when I click on 'TWO':

      QAccessibleTree::indexFromLogical: invalid index:  2 0  for  QTreeView(0x7fffb82b80e0) 
      Cannot creat accessible child interface for object:  QTreeView(0x7fffb82b80e0)  index:  3 
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            frederik Frederik Gladhorn
            stephen.kelly Stephen Kelly (Unused account) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes