Accessibility indexes are no longer 1-based.

The updates for focus/selection in QTreeView
were still adding +1 as it was required in Qt 4.

Task-number: QTBUG-28174

Change-Id: Ib9fea7e20d431a0ef0db18494e7bdda06a0646b0
Reviewed-by: Stephen Kelly <stephen.kelly@kdab.com>